<resources>
    <string name="app_name">Scan-Inv</string>

    <string name="item_scan">Scan</string>
    <string name="item_full">Full</string>
    <string name="item_settings">Settings</string>

    <string name="tv_Titulo">Titulo</string>

    <string name="optionEmail">Continuar con Email</string>
    <string name="optionGoogle">Continuar con Google</string>

    <string name="txt_login">Login</string>
    <string name="et_Email">Correo electrónico</string>
    <string name="et_Password">Contraseña</string>
    <string name="btn_Ingresar">Ingresar</string>
    <string name="txt_no_tienes_cuenta">¿No tienes una cuenta?</string>
    <string name="tv_registrarme">Registrarme</string>

    // Pantalla SCAN
    <string name="txt_Scan">SCAN</string>
    <string name="et_EPC">EPC</string>
    <string name="et_NoInv">No Inventario</string>
    <string name="btn_Send">Enviar</string>"
    <string name="btn_Check">Validar</string>"

    // Pantalla FULL
    <string name="txt_Full">FULL</string>
    <string name="btn_Get">Consultar</string>"
    <string name="btn_Clean">Limpiar</string>"

    // Pantalla Settings
    <string name="txt_Settings">Settings</string>
    <string name="et_Power">Power:</string>
    <string name="uhf_title_dbm">dBm</string>
    <string name="et_Frequency">Frequency:</string>
    <string name="et_Url">URL</string>
    <string name="txt_URL">http://201.96.185.X:3100</string>
    <string name="btn_Save">Save</string>"

    <string name="United_States_Standard">United States Standard(902~928MHz)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>