<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Fragmentos.FragmentSettings">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_Settings"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/tv_Version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/et_Power"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spPower"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/arrayPower"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uhf_title_dbm" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/et_Frequency"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/SpinnerFrequency"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/arrayMode"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_Url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_Url"
            android:inputType="textUri"
            android:text="@string/txt_URL" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_Save"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_Save"/>

</androidx.appcompat.widget.LinearLayoutCompat>