<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/fragmentScan"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Fragmentos.FragmentScan">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_Scan"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_EPC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_EPC"
            android:inputType="text"

            android:focusable="false"
            android:clickable="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_NoInv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_NoInv"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
        android:id="@+id/btn_Check"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_Check"
        android:layout_marginEnd="8dp"/>

        <Button
        android:id="@+id/btn_Send"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_Send"
        android:layout_marginStart="8dp"/>
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>